# dotuix

./: .dockerignore  .gitignore  README.md  biome.json  bridge-test.uix  captain-definition  llms.txt  package.json  pnpm-lock.yaml  railway.json  restaurant.uix  test-app-cli.uix  tsconfig.base.json  turbo.json  vercel.json
.changeset/: config.json
.github/workflows/: desktop-contract-regression.yml  release-editor.yml  release-viewer.yml
apps/editor/: electron.vite.config.ts  install_output.txt  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json
apps/mcp-server/: Dockerfile  package.json
apps/mobile/: app.json  package-lock.json  package.json
apps/viewer/: index.html  package.json  vite.config.ts
apps/viewer/src-tauri/: Cargo.toml  tauri.conf.json
apps/viewer/src-tauri/icons/: icon.icns
apps/viewer/src-tauri/src/: lib.rs
apps/web-viewer/: index.html  package.json  tsconfig.json  vite.config.ts
apps/website/: index.html  package.json  prerender.mjs  vercel.json  vite.config.ts
demos/: api-test.uix  bridge-test.uix  build-api-test.mjs  gov-briefing-demo.uix  gov-key.pub  hello-world.uix  intake-form.uix  persistent-counter.uix  pos.uix  product-catalogue-claude.uix  product-catalogue.uix  restaurant-kiosk.uix  restaurant-template.uix  sales-dashboard.uix  staff-directory.uix
demos/api-test/: app.js  data.db  index.html  manifest.json  style.css
demos/gov-briefing-demo/: app.js  (+3 more)
docs/: API_PLAN.md  ROADMAP.md  logo.icns  plan.md
guides/: for-business-owners.md  for-developers.md
my-uix-app/: app.js  index.html  manifest.json  style.css
scripts/: fix-macos-icon.mjs  fix-uix.mjs  generate-icons.mjs
spec/: spec.md
test-app-cli/: app.js  index.html  manifest.json
(+96 files in other folders)
