[package]
name = "dotuix-viewer"
version = "0.3.18"
description = "dotuix viewer — open .uix files in kiosk mode"
authors = []
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "dotuix-viewer"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
zip = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
ed25519-dalek = "2"
sha2 = "0.10"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
